fixed input placeholder being visible on firefox

--- a/src/components/SettingsDialog/Components/SettingsInput.scss
+++ b/src/components/SettingsDialog/Components/SettingsInput.scss
@@ -50,6 +50,7 @@
 
   &__hidden-placeholder::placeholder {
     visibility: hidden;
+    color: transparent;
   }
 
   &__children {
